fix(Root): video stretched and actions repositioned

--- a/src/components/VideoPlayer/styles.module.css
+++ b/src/components/VideoPlayer/styles.module.css
@@ -1,5 +1,7 @@
 .video {
 	width: 100%;
+	height: 100%;
+	object-fit: fill;
 }
 
 .wrapper {
@@ -28,7 +30,7 @@
 
 .actions {
 	position: absolute;
-	bottom: 215px;
+	bottom: 180px;
 	right: 13px;
 }
 
